force-app/main/default/objects/CreditCodeGeneration__c/CreditCodeGeneration__c.object-meta.xml
<CustomObject>
    <description>保存每次 AI 联网查询和客户编码生成的审计记录。</description>
    <label>客户编码生成记录</label>
    <nameField>
        <displayFormat>CCG-{000000}</displayFormat>
        <label>生成记录编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>