force-app/main/default/objects/CreditCodeGeneration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>客户</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>客户编码生成记录</relationshipLabel>
    <relationshipName>CreditCodeGenerations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>