force-app/main/default/objects/CreditCodeGeneration__c/fields/AiResult__c.field-meta.xml
<CustomField>
    <fullName>AiResult__c</fullName>
    <label>AI 查询结果</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>