force-app/main/default/objects/CreditCodeGeneration__c/fields/CodeBody__c.field-meta.xml
<CustomField>
    <fullName>CodeBody__c</fullName>
    <label>编码主体</label>
    <length>255</length>
    <type>Text</type>
</CustomField>