force-app/main/default/objects/CreditCodeGeneration__c/fields/FinalCode__c.field-meta.xml
<CustomField>
    <fullName>FinalCode__c</fullName>
    <label>最终编码</label>
    <length>255</length>
    <type>Text</type>
</CustomField>