force-app/main/default/objects/CreditCodeGeneration__c/fields/InputSnapshot__c.field-meta.xml
<CustomField>
    <fullName>InputSnapshot__c</fullName>
    <label>输入快照</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>