force-app/main/default/objects/CreditCodeGeneration__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>生成模式</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI_LOOKUP</fullName>
                <label>AI 联网查询</label>
            </value>
            <value>
                <fullName>MANUAL_CHECK_DIGIT</fullName>
                <label>手工补全校验码</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>