force-app/main/default/objects/CreditCodeGeneration__c/fields/ReplacementReason__c.field-meta.xml
<CustomField>
    <fullName>ReplacementReason__c</fullName>
    <label>换码原因</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>