force-app/main/default/objects/CreditCodeGeneration__c/fields/SequenceCategory__c.field-meta.xml
<CustomField>
    <fullName>SequenceCategory__c</fullName>
    <label>序列类别</label>
    <length>80</length>
    <type>Text</type>
</CustomField>