force-app/main/default/objects/CreditCodeGeneration__c/fields/SequenceValue__c.field-meta.xml
<CustomField>
    <fullName>SequenceValue__c</fullName>
    <label>使用序号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>