force-app/main/default/objects/CreditCodeGeneration__c/fields/SourceUrls__c.field-meta.xml
<CustomField>
    <fullName>SourceUrls__c</fullName>
    <label>信息来源</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>