force-app/main/default/objects/CreditCodeGeneration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状态</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRAFT</fullName>
                <default>true</default>
                <label>待处理</label>
            </value>
            <value>
                <fullName>SEARCHING</fullName>
                <label>联网查询中</label>
            </value>
            <value>
                <fullName>READY</fullName>
                <label>待确认</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <label>已完成</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>失败</label>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
                <label>已取消</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>