force-app/main/default/objects/CreditCodeGeneration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Mode__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>